sro-packages/salesforce-cpq-tools/main/default/objects/Order/fields/StatusAutoActivate__c.field-meta.xml
<CustomField>
    <fullName>StatusAutoActivate__c</fullName>
    <formula>HYPERLINK(&apos;/flow/CPQTools_Order_TriggerAction?Id=&apos; &amp; Id &amp; &apos;&amp;ActionType=AutoActivate&apos; &amp; &apos;&amp;retURL=&apos; &amp; Id,

IF( AutoActivateContract__c ,
IMAGE(&quot;https://i.ibb.co/HFyW4R3/toggle-on.png&quot;, &quot;on&quot;,20,40),
IMAGE(&quot;https://i.ibb.co/b5kpPGk/toggle-off.png&quot;,&quot;off&quot;,20,40)
)

, &quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto-Activate Contract</label>
    <type>Text</type>
</CustomField>