sro-packages/salesforce-cpq-tools/main/default/objects/Order/fields/StatusContract__c.field-meta.xml
<CustomField>
    <fullName>StatusContract__c</fullName>
    <formula>IF( SBQQ__Contracted__c ,IMAGE(&quot;https://i.ibb.co/1R5WykQ/btn-contracted.png&quot;,&quot;Contracted&quot;,20,60),
                         IMAGE(&quot;https://i.ibb.co/bQzt4hV/btn-uncontracted.png&quot;, &quot;Uncontracted&quot;,20,60)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status (Contract)</label>
    <type>Text</type>
</CustomField>